--- a/src/styles/generated-answer.css
+++ b/src/styles/generated-answer.css
@@ -31,6 +31,16 @@
   font-weight: 400;
 }
 
+.generated-answer-text .token-with-underline {
+  display: inline-block;
+  padding-bottom: 4px;
+  border-bottom-width: 6px;
+  border-bottom-style: solid;
+  border-radius: 2px;
+  margin-right: 1px;
+  line-height: 1.6;
+}
+
 .answer-caret {
   display: inline-block;
   margin-left: 2px;
