--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -290,3 +290,18 @@ h2 {
     border-radius: 12px;
   }
 }
+
+/* Token underlines */
+.tokenized-text {
+  display: inline;
+}
+
+.token-with-underline {
+  display: inline-block;
+  padding-bottom: 4px;
+  border-bottom-width: 6px;
+  border-bottom-style: solid;
+  border-radius: 2px;
+  margin-right: 1px;
+  line-height: 1.6;
+}
