--- a/src/index.css
+++ b/src/index.css
@@ -29,5 +29,5 @@ body {
 
 #root {
   width: 100%;
-  min-height: 100vh;
+  /* min-height removed to prevent excess whitespace - content determines height */
 }
